# twitch-bot

./: .TODO  .env.example  .gitignore  Cargo.toml  README.md  TODO.md
assets/: config.json  copypastas.json
assets/explanations/: E1.txt
assets/sql/: channel_table.sql  channel_tables.sql  init_db.sql  log_message.sql  markov_index_table.sql
docs/: IDEAS.md  README.md
docs/img/: optimise.sh
docs/src/: setup.excalidraw
src/: api.rs  api_models.rs  background.rs  commands.rs  constants.rs  db.rs  lib.rs  main.rs  twitch_api.rs  twitch_api_models.rs
