[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
dotenv = "0.15.0"
futures = "0.3"
lazy_static = "1.4.0"
paw = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "sqlite"] }
structopt = { version = "0.3", features = ["paw"] }
tokio = "1.17.0"
tokio-cron-scheduler = "0.5.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
twitch-irc = "3.0.1"