[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "1.0.30"
tokio = "1.17.0"
twitch-irc = "3.0.1"