[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
async-recursion = "1.0.0"
colored = "2.0.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
futures = "0.3"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "1.0.30"
tokio = "1.17.0"
tokio-cron-scheduler = "0.5.0"
twitch-irc = "3.0.1"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"